test/resources/typer/failing/ArithError1.scala
object ArithError1 {
  1 + true
}
